# Funky-System

./: .gitignore  CMakeLists.txt  README.md  display.c  display.h  font.h  funky_system.h  input.c  input.h  main.c  sonar-project.properties  vm.c  vm.h
.github/workflows/: cmake.yml  sonar.yml
emscripten/: build.sh  shell.html  simplehttpserver.py
fonts/: EditorIcons.fnt  Funky5.fnt  Funky7.fnt  Funky9.fnt  font_builder.py
os/emscripten/: main.c
os/linux/: linux.c
os/macos/: Info.plist  MainMenu.xib  bundle.sh  create_icns.sh  main.m
os/windows/: win32.c
runtime/: build.cmd  build.sh  clipboard.c  clipboard.wckd  color.wckd  console.wckd  draw.c  draw.wckd  editor.wckd  editor_code.wckd  editor_file_list.wckd  editor_gfx.wckd  editor_gfx_file_list.wckd  editor_msgbox.wckd  editor_prompt.wckd  editor_state.wckd  fs.c  fs.wckd  input.c  input.wckd  kernel.wckd  keyboard.wckd  math.wckd  stdlib.wckd  test_app.wckd  timer.c  timer.wckd
